[package]
name = "repo-scraper"
version = "0.1.0"
edition = "2021"
description = "GitHub repository scraper for presenting repositories on a personal website"
repository = "https://github.com/LeHuman/repo-scraper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
