[package]
name = "reposcrape"
authors = ["LeHuman"]
version = "0.1.2"
edition = "2021"
description = "Repository scraper for presenting repositories on a personal website"
repository = "https://github.com/LeHuman/reposcrape"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.39.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.117"
chrono = "0.4.38"
regex = "1.10.5"
set_field = "0.1.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
localsavefile = { version = "0.2.3" }
savefile = "0.17.7"
secrecy = "0.8.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
